Edits the top line comment

--- a/myBBC.html
+++ b/myBBC.html
@@ -1,4 +1,4 @@
-<!-- This is a practice for Git-->
+<!-- This is a practice for Git intended to test all features and practice skills learned-->
 <?xml version="1.0" encoding="UTF-8"?>
  <!DOCTYPE html
      PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
